--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brobbot-google",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A brobbot plugin for googling.",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/b3nj4m/brobbot-google",
   "peerDependencies": {
-    "brobbot": "4.x"
+    "brobbot": "4.x - 5.x"
   }
 }
